# RRPF-Protocol

./: .gitignore  .ruff.toml  CHANGELOG.md  LICENSE  README.md  VERSIONING.md  mypy.ini  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  publish.yml
docs/: README.md  annotations.md  engines.md  quickstart.md
src/rrpf/: __init__.py
src/rrpf/annotations/: __init__.py  base.py  event.py  inspect.py  registry.py  table.py
src/rrpf/examples/: __init__.py  memory_engine.py  sqlite_engine.py
src/rrpf/fulfillment/: __init__.py  accounting.py  engine.py  ordering.py  runner.py
src/rrpf/hashing/: __init__.py  canonical_json.py  digest.py
src/rrpf/normalization/: __init__.py  canonicalize.py  sorting.py
src/rrpf/schemas/: __init__.py  as_of.py  common.py  constraints.py  data_requests.py  errors.py  intent.py  provenance.py  request.py  response.py
src/rrpf/storage/: __init__.py  filesystem_store.py  memory_store.py  payload_store.py  replay.py
src/rrpf/validation/: __init__.py  errors.py  rules.py  validator.py
tests/: test_canonicalization.py  test_examples.py  test_public_api.py  test_runner.py  test_schemas_import.py  test_storage.py  test_validation.py  test_version_lock.py
tests/test_annotations/: test_annotations.py
